# regex-crossword-solver

./: .gitignore  .pyre_configuration  README.md  regex-crossword-solver.cabal  stack-sysghc.yaml  stack.yaml  util.sh
demos/: demos.json  demos.solutions.txt  website-excerpts.json  website-excerpts.solutions.json
src/: Regex.hs  solver.py
